# LevelRenderer

./: .gitignore  CMakeLists.txt  Camera.h  FileHelper.cpp  FileHelper.h  Frustum.h  GameLevel.txt  Gateware.h  GatewareDefine.h  Level.h  Level.h2b  LevelData.h  Project Rubric.xlsx  RawMeshData.h  Readme.txt  StaticMesh.h  StorageBuffer.h  TestLevel_Instancing.txt  VulkanInitializers.h  VulkanPipeline.h  VulkanStorageBuffer.h  VulkanTools.h  h2bParser.h  main.cpp  renderer.h
Assets/h2b/: Farm_Mill.h2b  Farm_Plane.h2b  Fence_1.h2b  Firewood_Cylinder.h2b  Floating_Island_PolySphere.h2b  GrassPatch1_Circle.h2b  GrassPatch2_GrassPatch1_Circle.h2b  Mushrooms_1_Mushrooms_1.h2b  Tree_PM3D_Sphere3D1.h2b  VagrShip_group1.h2b  barn_Plane.h2b
Levels/: GameLevelLights.txt  GameLevelMain.txt  NormalMapTest.txt  TestLevel_Instancing.txt  TestLevel_Light.txt  TestLevel_Lights.txt  TestLevel_SpotLights.txt  TestLevel_Textures.txt  TestLevel_Textures_2.txt  TestLevel_Textures_3.txt  TestLevel_Textures_PBR.txt
Math/: Matrix4D.h  Vector2D.h  Vector3D.h  Vector4D.h  VrixicMath.cpp  VrixicMath.h  VrixicMathDirectX.h  VrixicMathHelper.h
Shaders/: BasicPixel.hlsl  BasicVertex.hlsl  DebugPixel.hlsl  DebugVertex.hlsl  FresnelNormalPixel.hlsl  FresnelPixel.hlsl  MaterialPixel.hlsl  MaterialVertex.hlsl  ModelPixel.hlsl  ModelVertex.hlsl  NormalPixel.hlsl  NormalVertex.hlsl  TestDomain.hlsl  TestHull.hlsl  TexturePixel.hlsl  TextureVertex.hlsl  ToonPixel.hlsl
